--- a/style.css
+++ b/style.css
@@ -7,12 +7,19 @@
     font-family: 'Poppins';
 }
 
+html, body{
+    position: relative;
+    overflow-x: hidden;
+    width: 100%;
+}
+
 .container{
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-top: 10rem;
 }
 
 .currentPlayer{
@@ -34,7 +41,7 @@ button{
     width: 450px;
     display: flex;
     flex-wrap: wrap;
-    margin-top: 2rem;
+    margin: 2rem 0;
     user-select: none;
 }
 
@@ -67,6 +74,7 @@ button{
     text-align: center;
     gap: 30px;
     flex-direction: column;
+    margin-bottom: 15rem;
 }
 
 .scoreNumbers{
@@ -90,9 +98,24 @@ button{
     display: inline-block;
 }
 
+.footer{
+    position: fixed;
+    bottom: 0;
+    background-color: #123456;
+    color: #fff;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 10px;
+    gap: 5px;
+}
+
 @media screen and (max-width:576px){
     .container{
-        margin: 5rem 0;
+        margin: 0;
     }
 
     #gameBoard{
@@ -104,5 +127,9 @@ button{
         width: 110px;
         height: 110px;
         font-size: 70px;
+    }
+
+    .score{
+        margin-bottom: 3rem;
     }
 }
