--- a/style.css
+++ b/style.css
@@ -18,8 +18,26 @@ nav{
     background-color: #123456;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 16px;
+    padding: 20px 40px;
     color: #fff;
+}
+
+.navLinks{
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: -47%;
+    left: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    text-align: center;
+    flex-direction: column;
+    z-index: 999;
+    overflow-y: hidden;
 }
 
 .container{
@@ -119,10 +137,11 @@ button{
 }
 
 .modalWrapper{
-    background-color: #000000de;
+    background-color: rgba(0, 0, 0, 0.9);
     width: 100vw;
     height: 100vh;
-    position: fixed;
+    position: absolute;
+    top: 7%;
     display: flex;
     align-items: center;
     justify-content: center;
