--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ nav{
     text-align: center;
     flex-direction: column;
     z-index: 999;
-    overflow-y: hidden;
 }
 
 .container{
@@ -170,5 +169,9 @@ button{
         width: 110px;
         height: 110px;
         font-size: 70px;
+    }
+
+    nav{
+        padding: 20px;
     }
 }
