--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ nav{
     height: 100vh;
     position: absolute;
     transform: translate(-50%, -50%);
-    top: -47%;
-    left: 50%;
+    top: 45.5%;
+    right: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,6 +37,8 @@ nav{
     text-align: center;
     flex-direction: column;
     z-index: 999;
+    padding: 0 20px;
+    transition: .5s;
 }
 
 .container{
@@ -172,6 +174,6 @@ button{
     }
 
     nav{
-        padding: 20px;
+        padding: 10px;
     }
 }
